tdf#151544: Page grid: ruby height should be zero when not in square page mode

Ruby height is used to show the ruby line in square page mode only (e.g. to show the
Pinyin etc above or below base line). When not in square page mode (i.e., when in
normal mode), the ruby height should be zero.

The code was trying to set the ruby height to zero by using the following:
    m_xRubySizeMF->set_value(0, FieldUnit::TWIP);
and then pass this to aGridItem.SetRubyHeight in SwTextGridPage::PutGridItem.
However, there seems to be always a conversion loss, thus each line will have a tiny
ruby height, which makes the vertical space not enough to hold the desired number
of lines on the page.

Fix this by setting ruby height to zero directly in SwTextGridPage::PutGridItem if
we are not in square page mode.

Change-Id: I24a74b96c12eb58e46e163e2a9c73b540023ab39
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142243
Tested-by: Jenkins
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 875c27dc7975de9b007a215fe1d6f171b4ef090e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142514